--- a/.github/workflows/test-shell-script.yml
+++ b/.github/workflows/test-shell-script.yml
@@ -13,7 +13,7 @@ on:
           - prod
         type: choice
       Environment2:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment2 to run the script'
         required: true
         default: dev
         options:
@@ -22,7 +22,7 @@ on:
           - prod
         type: choice
       Environment3:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment3 to run the script'
         required: true
         default: dev
         options:
@@ -31,7 +31,7 @@ on:
           - prod
         type: choice
       Environment4:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment4 to run the script'
         required: true
         default: dev
         options:
@@ -40,7 +40,7 @@ on:
           - prod
         type: choice
       Environment5:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment5 to run the script'
         required: true
         default: dev
         options:
@@ -49,7 +49,7 @@ on:
           - prod
         type: choice
       Environment6:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment6 to run the script'
         required: true
         default: dev
         options:
@@ -58,7 +58,7 @@ on:
           - prod
         type: choice
       Environment7:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment7 to run the script'
         required: true
         default: dev
         options:
@@ -67,7 +67,7 @@ on:
           - prod
         type: choice
       Environment8:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment8 to run the script'
         required: true
         default: dev
         options:
@@ -76,7 +76,7 @@ on:
           - prod
         type: choice
       Environment9:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment9 to run the script'
         required: true
         default: dev
         options:
@@ -85,7 +85,7 @@ on:
           - prod
         type: choice
       Environment10:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment10 to run the script'
         required: true
         default: dev
         options:
@@ -94,7 +94,7 @@ on:
           - prod
         type: choice
       Environment11:
-        description: 'Select the environment to run the script'
+        description: 'Select the environment11 to run the script'
         required: true
         default: dev
         options:
@@ -111,3 +111,5 @@ jobs:
     uses: ./.github/workflows/reusable-test.yml
     with:
       script-path: ./scripts/myscript.sh
+    env:
+      ENVIRONMENT11: dev
