--- a/.github/workflows/test-shell-script.yml
+++ b/.github/workflows/test-shell-script.yml
@@ -128,13 +128,13 @@ jobs:
     uses: ./.github/workflows/reusable-test.yml
     with:
       script-path: ./scripts/myscript.sh
-      ENVIRONMENT: ${{ github.event.inputs.Environment }}
-      ENVIRONMENT2: ${{ github.event.inputs.Environment2 }}
-      ENVIRONMENT3: ${{ github.event.inputs.Environment3 }}
-      ENVIRONMENT4: ${{ github.event.inputs.Environment4 }}
-      ENVIRONMENT5: ${{ github.event.inputs.Environment5 }}
-      ENVIRONMENT6: ${{ github.event.inputs.Environment6 }}
-      ENVIRONMENT7: ${{ github.event.inputs.Environment7 }}
-      ENVIRONMENT8: ${{ github.event.inputs.Environment8 }}
-      ENVIRONMENT9: ${{ github.event.inputs.Environment9 }}
-      ENVIRONMENT10: ${{ github.event.inputs.Environment10 }}
+      ENVIRONMENT: ${{ inputs.Environment }}
+      ENVIRONMENT2: ${{ inputs.Environment2 }}
+      ENVIRONMENT3: ${{ inputs.Environment3 }}
+      ENVIRONMENT4: ${{ inputs.Environment4 }}
+      ENVIRONMENT5: ${{ inputs.Environment5 }}
+      ENVIRONMENT6: ${{ inputs.Environment6 }}
+      ENVIRONMENT7: ${{ inputs.Environment7 }}
+      ENVIRONMENT8: ${{ inputs.Environment8 }}
+      ENVIRONMENT9: ${{ inputs.Environment9 }}
+      ENVIRONMENT10: ${{ inputs.Environment10 }}
