--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -18,4 +18,4 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Run shell script
-        run: bash ${{ inputs.script-path }} ${{ inputs.Environment }} ${{ inputs.Environment11 }}
+        run: bash "${{ inputs.script-path }} ${{ inputs.Environment }} ${{ inputs.Environment11 }}"
