updated names of env vars

--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -6,10 +6,10 @@ on:
       script-path:
         required: true
         type: string
-      Environment:
+      MyEnvironment:
         required: true
         type: string
-      Environment11:
+      MyEnvironment11:
         required: true
         type: string
 jobs:
