comment out env11 from reusable call

--- a/.github/workflows/test-shell-script.yml
+++ b/.github/workflows/test-shell-script.yml
@@ -128,4 +128,4 @@ jobs:
     with:
       script-path: ./scripts/myscript.sh
       MyEnvironment: ${{ inputs.MyEnvironment }}
-      MyEnvironment11: ${{ env.MyEnvironment11 }}
+      # MyEnvironment11: ${{ vars.MyEnvironment11 }}
